--- a/analysis.qmd
+++ b/analysis.qmd
@@ -123,5 +123,263 @@ run_app1()
 
 ![](images/app1-t4.png)
 
+## UI
+
+The UI simply call the modules
+
+```{r, eval=FALSE}
+ui1 <- function() {
+  ui <- page_navbar(
+    title = "CRAM whales 2.0",
+    theme = my_bs_theme(),
+    sidebar = sidebar(
+      dateInput(inputId = "date", label = "Date", value = app_start_date(), max = app_start_date()),
+      numericInput(inputId = "n_whales", label = "Show top N downloaders:", 6, min = 1, max = 25, step = 1)
+    ),
+    nav_panel(title = "All traffic", md1.all_traffic_UI()),
+    nav_panel(title = "Biggest whales", md1.biggest_whales_UI()),
+    nav_panel(title = "Whales by hour", md1.whales_by_hour_UI()),
+    nav_panel(title = "Detail view", md1.detail_view_UI())
+  )
+
+  ui
+}
+```
+
+## Server
+
+```{r, eval=FALSE}
+server1 <- function(input, output, session) {
+  # rc.data: read data ------------------------------------------------------
+  rc.data <- reactive({
+    download_and_read(input$date)
+  }) |>
+    bindEvent(input$date)
+
+
+  # Tab 1: All traffic ------------------------------------------------------
+  # rc.count: simple counting -----------------------------------------------
+  rc.count <- reactive({
+    calc_count_downloads(rc.data())
+  })
+
+  # rc.whales: separate the whales ------------------------------------------
+  rc.whales <- reactive({
+    create_ip_names(rc.count(), input$n_whales)
+  }) |>
+    bindEvent(input$n_whales, rc.count())
+
+  rc.whales_vs_non_whales_by_hour <- reactive({
+    calc_whales_vs_non_whales_by_hour(df = rc.data(), whale_ip = rc.whales()$ip_id)
+  })
+
+  # rc.valueboxes ------------------------------------------------------------
+  rc.valuebox1 <- reactive({
+    calc_valuebox_size(rc.data())
+  })
+
+  rc.valuebox2 <- reactive({
+    calc_valuebox_rows(rc.data())
+  })
+
+  rc.valuebox3 <- reactive({
+    calc_valuebox_unique_ids(rc.data())
+  })
+
+  # Tab 2: Biggest whales ---------------------------------------------------
+  # reuse rc.whales
+
+
+  # Tab 3: Whales by hour ---------------------------------------------------
+  # rc.downloads_by_hour_with_names -----------------------------------------
+  rc.downloads_by_hour_with_names <- reactive({
+    calc_whales_by_hour(rc.data(), rc.whales())
+  })
+
+
+  # Tab 4: Detail view ------------------------------------------------------
+  # uses rc.data and rc.whales
+
+  # modules -----------------------------------------------------------------
+  md1.all_traffic_server(
+    rc.valuebox1 = rc.valuebox1, rc.valuebox2 = rc.valuebox2, rc.valuebox3 = rc.valuebox3,
+    rc.whales_vs_non_whales_by_hour = rc.whales_vs_non_whales_by_hour
+  )
+
+  md1.biggest_whales_server(rc.biggest_whales = rc.whales)
+  md1.whales_by_hour_server(rc.downloads_by_hour_with_names = rc.downloads_by_hour_with_names)
+  md1.detail_view_server(rc.data = rc.data, rc.whales = rc.whales)
+}
+```
+
+## Data
+
+```{r, eval=FALSE}
+# read data ---------------------------------------------------------------
+create_dir_and_delete_files <- function() {
+  dir.create(path = "data_cache", showWarnings = FALSE)
+  unlink(x = list.files(path = "data_cache", full.names = TRUE))
+}
+
+file_path <- function(date) {
+  path <- file.path("data_cache", paste0(date, ".csv.gz"))
+
+  path
+}
+
+download_data <- function(date = today() - days(2)) {
+  year <- year(date)
+
+  url <- glue::glue("http://cran-logs.rstudio.com/{year}/{date}.csv.gz")
+  path <- file_path(date)
+
+  # download only if file does not exist
+  if (!file.exists(path)) download.file(url = url, destfile = path)
+
+  NULL
+}
+
+read_data <- function(date = today() - days(2)) {
+  path <- file_path(date)
+
+  df <-
+    readr::read_csv(path, col_types = "Dti---f-fi", progress = FALSE) |>
+    filter(!is.na(package)) |>
+    mutate(hour = hms::trunc_hms(time, 60 * 60))
+
+  df
+}
+
+download_and_read <- function(date = today() - days(2)) {
+  download_data(date)
+  read_data(date)
+}
+
+# tab 1: all traffic -----------------------------------------------------------
+calc_valuebox_size <- function(df) {
+  df$size |>
+    as.numeric() |>
+    sum() |>
+    gdata::humanReadable()
+}
+
+calc_valuebox_rows <- function(df) {
+  df |>
+    nrow() |>
+    format_number()
+}
+
+calc_valuebox_unique_ids <- function(df) {
+  df$ip_id |>
+    unique() |>
+    length() |>
+    format_number()
+}
+
+calc_count_downloads <- function(df) {
+  df |>
+    count(ip_id, country, name = "downloads") |>
+    arrange(desc(downloads))
+}
+
+calc_whales_vs_non_whales_by_hour <- function(df, whale_ip) {
+  whales_vs_non_whales_by_hour <-
+    df |>
+    mutate(
+      is_whale = ip_id %in% whale_ip
+    ) |>
+    count(hour, is_whale, name = "downloads")
+
+  whales_vs_non_whales_by_hour
+}
+
+# tab 2: biggest whales ------------------------------------------------------------------
+create_ip_names <- function(df_count, n_whales) {
+  df_count |>
+    slice_head(n = n_whales) |>
+    mutate(ip_name = paste0("WHALE_", formatC(x = row_number(), width = 2, flag = "0"), " [", country, "]"))
+}
+
+# tab 3: whales by hour ----------------------------------------------------------
+calc_whales_by_hour <- function(df, df_whales) {
+  whales_by_hour <-
+    df |>
+    inner_join(df_whales, by = "ip_id") |>
+    count(hour, ip_name, name = "downloads")
+
+  whales_by_hour
+}
+
+
+# tab 4: detail view ----------------------------------------------------------
+calc_valuebox_unique_packages <- function(df) {
+  df$package |>
+    unique() |>
+    length() |>
+    format_number()
+}
+```
+
+## Plots
+
+```{r, eval=FALSE}
+my_gg_theme <- function() {
+  theme_minimal()
+}
+
+# tab 1: all traffic -------------------------------------------------------------
+plot_whales_vs_non_whales_by_hour <- function(whales_vs_non_whales_by_hour) {
+  whales_vs_non_whales_by_hour |>
+    ggplot(aes(hour, downloads, fill = is_whale)) +
+    geom_bar(stat = "identity") +
+    scale_fill_manual(
+      values = c("#666666", "#88FF99"),
+      labels = c("no", "yes")
+    ) +
+    ylab("Downloads") +
+    xlab("Hour") +
+    scale_y_continuous(labels = scales::comma) +
+    my_gg_theme()
+}
+
+# tab 2: biggest whales ------------------------------------------------------------------
+plot_biggest_whales <- function(biggest_whales) {
+  biggest_whales |>
+    ggplot(aes(ip_name, downloads)) +
+    geom_bar(stat = "identity") +
+    ylab("Downloads on this day") +
+    my_gg_theme()
+}
+
+# tab 3: whales by hour ----------------------------------------------------------
+plot_downloads_by_hour_whales <- function(downloads_by_hour_with_names) {
+  downloads_by_hour_with_names |>
+    ggplot(aes(hour, downloads)) +
+    geom_bar(stat = "identity") +
+    facet_wrap(~ip_name) +
+    ylab("Downloads") +
+    xlab("Hour") +
+    my_gg_theme()
+}
+
+# tab 4: detail view ----------------------------------------------------------
+plot_whale_data <- function(whale_data) {
+  pkg <- levels(whale_data$package)
+  breaks <- pkg[seq(from = 1, to = length(pkg), length.out = 50) %>%
+    as.integer() %>%
+    c(1, length(pkg)) %>%
+    unique()]
+
+  whale_data |>
+    ggplot(aes(time, package)) +
+    geom_point() +
+    scale_x_time(
+      breaks = seq(hms::hms(0, 0, 0), by = 60 * 60 * 3, length.out = 9),
+      limits = c(hms::hms(0, 0, 0), hms::hms(0, 0, 24))
+    ) +
+    scale_y_discrete(breaks = breaks)
+}
+```
+
 
 # App 2: save calculations and retrieve them later
